# ocr_rusty

./: .gitignore  Cargo.toml  README.md  example.py  pyproject.toml
.github/workflows/: CI.yml
src/: image_cleaner.rs  lib.rs
