[package]
name = "ocr_rusty"
version = "0.1.0"
edition = "2021"
authors = ["Scr44gr <scr44gr@protonmail.com>"]
description = "Library to extract crypto pairs text from images, for Python."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ocr_rusty"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.3", features = ["extension-module"] }
leptess = "0.13.2"
image = "0.24.2"
imageproc = {version = "0.23.0", features = ["display-window"]}